--- a/app/views/news/index_pt.html.erb
+++ b/app/views/news/index_pt.html.erb
@@ -1,6 +1,10 @@
 <div class="container flags d-flex">
-   <%=link_to image_tag("pt-br.jpg"), news_pt_path%>
-    <%=link_to image_tag("es.jpg"), news_pt_path %>
+  <%= link_to news_pt_path do %>
+    <%=image_tag("pt-br.jpg", class: "flags")%>
+  <% end %>
+<%= link_to news_pt_path do %>
+    <%=image_tag("es.jpg", class: "flags")%>
+  <% end %>
 </div>
 
 <% @news.each do |news| %>
