--- a/app/views/news/new.html.erb
+++ b/app/views/news/new.html.erb
@@ -6,7 +6,7 @@
       <%= f.input :title_es, label: "Titulo em Espanhol"%>
       <%= f.input :content_pt, label: "Conteudo em Portugues"%>
       <%= f.input :content_es, label: "Conteudo em Espanhol"%> 
-      <%#= f.input :photo, as: :file %>
+      <%= f.input :photo, as: :file %>
       <%= f.submit class: "btn btn-primary mb-5" %>
     <% end %>
   </div>
