--- a/app/views/news/index_es.html.erb
+++ b/app/views/news/index_es.html.erb
@@ -1,20 +1,24 @@
 <div class="container flags d-flex">
- <%= link_to  news_pt_path do %>
-  <%=image_tag("pt-br.jpg", class: "flags")%>
- <% end %>
- <%= link_to news_es_path do %>  
-    <%=image_tag("es.jpg", class: "flags")%>
-  <% end %>
+   <%=image_tag("pt-br.jpg", class: "flags") %>
+   <%=image_tag("es.jpg", class: "flags") %>
 </div>
 
-<% @news.each do |news| %>
-<div class="card-trip">
-  <%= cl_image_tag news.photo.key %>
-  <div class="card-trip-infos">
-    <div>
-      <h2><%= news.title_es %></h2>
-    </div>
-    <p>Por <%= news.user.first_name %> <%= news.user.last_name %></p>
+<div class="news">
+  <div class="d-flex">
+    <h4 id="titulo-pt">Flash News - O seu portal de notícias</h4>
+    <% if current_user.admin %>
+      <%= link_to "Adicionar Noticia", new_news_path, class: 'btn btn-primary' %>
+    <% end %>
   </div>
+  <% @news.each do |news| %>
+  <div class="card-trip">
+    <%= cl_image_tag news.photo.key %>
+    <div class="card-trip-infos">
+      <div>
+        <h2><%= news.title_es %></h2>
+      </div>
+      <p>Por <%= news.user.first_name %> <%= news.user.last_name %></p>
+    </div>
+  </div>
+  <% end %>
 </div>
-<% end %>
