--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,6 +11,7 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
+      <% if current_user.active %>
         <li class="nav-item active">
           <%= link_to "Home", "#", class: "nav-link" %>
         </li>
@@ -20,6 +21,12 @@
         <li class="nav-item">
           <%= link_to "Videos", "#", class: "nav-link" %>
         </li>
+        <% if current_user.admin %>
+        <li class="nav-item">
+          <%= link_to "Área administrativa", admin_path, class: "nav-link" %>
+        </li>
+        <% end %>
+      <% end %>
         <% if user_signed_in? %>
           <div class="dropdown show">
             <a class="nav-link" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -27,9 +34,6 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <%= link_to "Minha Conta", edit_user_registration_path, class: "dropdown-item" %>
-              <% if current_user.admin %>
-              <%= link_to "Área administrativa", "#", class: "dropdown-item" %>
-              <% end %>
               <%= link_to "Sair", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
             </div>
           </li>
