Did the user banment page, still need to do more back end

--- a/app/views/pages/admin_page.html.erb
+++ b/app/views/pages/admin_page.html.erb
@@ -1,6 +1,6 @@
 <div class=admin-cards>
   <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
-   Gestão de Usuários
+   <%= link_to "Gestão de Usuários", user_admin_path %>
   </div>
   <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
     Gestão de Tags
