doind the tagns and need to solve the navbar

--- a/app/views/news/new.html.erb
+++ b/app/views/news/new.html.erb
@@ -7,6 +7,7 @@
       <%= f.input :content_pt, label: "Conteudo em Portugues"%>
       <%= f.input :content_es, label: "Conteudo em Espanhol"%> 
       <%= f.input :photo, as: :file %>
+      <%= f.input :all_tags, label: "Tags", placeholder: "Tags separated with comma" %>
       <%= f.submit class: "btn btn-primary mb-5" %>
     <% end %>
   </div>
