--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
-<% unless current.user.active %>
-  <h1>Você foi bloqueado, por favor entrar em contato com o administrador do sistema</h1>
-<% else %>
+<% if !user_signed_in?  %>
   <h1>Seja bem vindo ao Flash News</h1>
+<% else %>
+  <h1>Você foi bloqueado, por favor entrar em contato com o administrador do sistema</h1>
 <% end%>
