--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <% if current_user.active %>
+      <% if !user_signed_in? %>
         <li class="nav-item active">
           <%= link_to "Home", "#", class: "nav-link" %>
         </li>
@@ -21,7 +21,7 @@
         <li class="nav-item">
           <%= link_to "Videos", "#", class: "nav-link" %>
         </li>
-        <% if current_user.admin %>
+        <% if !user_signed_in? %>
         <li class="nav-item">
           <%= link_to "Área administrativa", admin_path, class: "nav-link" %>
         </li>
