--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,11 @@
   </head>
 
   <body>
-    <%= render 'shared/navbar' %>
+    <% if user_signed_in? %>
+      <%= render 'shared/navbar_logged' %>
+    <% else %>
+      <%= render 'shared/navbar_unlogged' %>
+    <% end %>
     <%= yield %>
     <%= render 'shared/flashes' %>
   </body>
