--- a/app/views/news/index_pt.html.erb
+++ b/app/views/news/index_pt.html.erb
@@ -16,6 +16,7 @@
     <div class="card-trip-infos">
       <div>
         <h2><%= link_to news.title_pt, news_portugues_path(news.id) %></h2>
+        <p><small>Tags: <%= raw news.tags.map(&:name).map { |t| link_to t, tag_path(t) }.join(', ') %></small></p>
         <p>postada dia <%= news.created_at.strftime("%d/%m/%Y")%> as <%= news.created_at.hour %> horas </p>
       </div>
       <p>Por <%= news.user.first_name %> <%= news.user.last_name %></p>
