--- a/app/views/pages/admin_page.html.erb
+++ b/app/views/pages/admin_page.html.erb
@@ -3,7 +3,7 @@
    <%= link_to "Gestão de Usuários", user_admin_path %>
   </div>
   <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
-    Gestão de Tags
+    <%= link_to "Gestão de Tags", tags_path %>
   </div>
   <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
     Moderação de Comentários
