Added the delete and removed the obligation of adding a video id

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -8,8 +8,12 @@
         </p>
       </div>
     </div>
-     <%#= link_to 'Delete', [comment.post, comment],
-                  method: :delete, class: "button is-danger", data: { confirm: 'Are you sure?' } %>
+    <% if user_signed_in? %>
+      <% if current_user.admin || current_user == comment.user %>
+        <%= link_to 'Delete', [comment.news, comment],
+          method: :delete, class: "button is-danger", data: { confirm: 'Are you sure?' } %>
+      <% end %>
+    <% end %>
   </article>
 
 </div>
