--- a/app/views/shared/_navbar_logged.html.erb
+++ b/app/views/shared/_navbar_logged.html.erb
@@ -16,7 +16,7 @@
           <%= link_to "Home", "#", class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Notícias", news_pt_url, class: "nav-link" %>
+          <%= link_to "Notícias", news_index_pt_url, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Videos", "#", class: "nav-link" %>
